Setup DB and use DB data in frontend
