# Backend/Models/Category.cs
@@ -1,0 +1,15 @@
+using System.ComponentModel.DataAnnotations;
+using System.Text.Json.Serialization;
+
+namespace Backend.Models;
+
+public class Category
+{
+    public int Id { get; set; }
+
+    [Required]
+    public string Name { get; set; } = string.Empty;
+
+    [JsonIgnore]
+    public ICollection<Product> Products { get; set; } = new List<Product>();
+}
