# Backend/Models/OrderItem.cs
@@ -1,0 +1,12 @@
+namespace Backend.Models;
+
+public class OrderItem
+{
+    public int Id { get; set; }
+    public int OrderId { get; set; }
+    public Order? Order { get; set; }
+    public int ProductId { get; set; }
+    public Product? Product { get; set; }
+    public int Quantity { get; set; }
+    public decimal Price { get; set; }
+}
